Fix Android APK compatibility and verify launch